[tool.poetry]
name = "qc-sim"
version = "0.0.0"
description = "query qc-sim"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qc_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
lxml = "^4.9.1"
pandas = "^1.5.0"
tabulate = "^0.9.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
